--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,7 @@
 html,
 body {
-    background-color: #E5E5F1;
+    background-color: #E4E4F1;
 }
-
-
-/* .container-fluid {
-    height: 100%;
-    width: 100%;
-    background-color: inherit;
-    padding: 0% !important;
-    margin: 0% !important;
-} */
-
-
-/* div.main {
-    height: 100%;
-    width: 100%;
-} */
-
-
-/* .header,
-.content,
-.footer {
-    width: 100% !important;
-    margin: 0% !important;
-} */
 
 .row {
     width: 100%;
@@ -39,26 +16,19 @@ header {
     display: inline-flex;
     min-height: 10% !important;
     padding: 1% 0% !important;
-    background-color: #2F4550;
-    /* position: fixed;
-    transition: 1s;
-    opacity: 0.7;
-    z-index: 999; */
-    /* min-height: 100%; */
-    /* display: table-cell; */
-    /* position: fixed; */
-    /* z-index: 1000; */
-    /* top: 0; */
-    /* left: 0; */
-    /* vertical-align: middle; */
-    /* width: 100%; */
-    /* background-color: rgba(255, 255, 255, .1); */
+    background-color: #496979;
+    position: fixed;
+    top: 0;
+    transition: 0.2s;
+    opacity: 0.57;
+    z-index: 999;
     /* box-shadow: 0 5px 10px rgb(0 0 0 / 10%); */
 }
 
 .head-scroll {
-    background-color: #2F4550 !important;
-    transition: 0.1s;
+    /* background-color: #2F4550 !important; */
+    opacity: 1;
+    /* transition: 0.1s; */
 }
 
 div.logo {
@@ -84,6 +54,11 @@ div.nav a {
     border: .5px solid #E5E5F1;
     margin-left: 1%;
     color: #E5E5F1;
+}
+
+div.nav a .active {
+    color: #141414 !important;
+    background-color: #e4e4f1 !important;
 }
 
 div.nav a:hover {
@@ -142,26 +117,104 @@ section.container-fluid {
     margin-bottom: 2% !;
 }
 
+.welcome img {
+    margin: 0 auto;
+}
+
+
+/* destination section */
+
 .top-dest .dest {
     padding: 0 !important;
 }
 
-.top-dest .dest:hover {
+
+/* .top-dest .dest:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     transition: box-shadow 0.3s ease-in-out;
-}
+} */
 
 .top-dest .dest img {
     width: 100%;
     height: 100%;
     display: block;
     margin: auto;
+    transition: transform .3s;
+}
+
+.dest img:hover {
+    transform: scale(1.5);
+}
+
+
+/* plan */
+
+.wall ul.travel-icons {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+.travel-icons li {
+    list-style: none;
+    margin: 0 20px;
+    display: inline-block;
+}
+
+.travel-icons a {
+    text-decoration: none;
+    outline: 0;
+    color: #337ab7;
+}
+
+.travel-icons li i {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+    -webkit-border-radius: 80px 80px 80px 80px;
+    color: #ffffff;
+    cursor: pointer;
+    line-height: 40px;
+    font-size: 30px;
+    background-color: #036;
+    text-align: center;
+}
+
+.travel-icons li i img {
+    margin: 0 auto;
+    width: 80%;
+}
+
+.travel-icons li a .caption {
+    color: #036;
+    font-size: 20px;
+    font-weight: 500;
+    margin: 10px 0;
+    display: block;
+    text-align: center;
+    letter-spacing: -0.5px;
 }
 
 
 /* footer */
 
 footer {
-    background-color: #586F7C;
+    background-color: #E4E4F1;
     padding: 3% 2%;
+}
+
+footer .fnt-color-light {
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 16px;
+    color: #666;
+}
+
+.credit h3 {
+    font-family: 'Quicksand', sans-serif;
+    padding: 0px;
+    font-size: 20px;
+    line-height: 1em;
+    color: #28497c;
 }
