--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,126 +1,133 @@
 html,
 body {
-  background-color: #e4e4f1;
+    background-color: #e4e4f1;
 }
 
 .row {
-  width: 100%;
-  height: 100%;
-  margin: 0 !important;
+    width: 100%;
+    height: 100%;
+    margin: 0 !important;
 }
+
 
 /* header */
 
 header {
-  display: inline-flex;
-  min-height: 10% !important;
-  padding: 1% 0% !important;
-  background-color: #496979;
-  position: fixed;
-  top: 0;
-  transition: 0.2s;
-  opacity: 0.57;
-  z-index: 999;
-  /* box-shadow: 0 5px 10px rgb(0 0 0 / 10%); */
+    display: inline-flex;
+    min-height: 10% !important;
+    padding: 1% 0% !important;
+    background-color: #496979;
+    position: fixed;
+    top: 0;
+    transition: 0.2s;
+    opacity: 0.57;
+    z-index: 999;
+    /* box-shadow: 0 5px 10px rgb(0 0 0 / 10%); */
 }
 
 .head-scroll {
-  /* background-color: #2F4550 !important; */
-  opacity: 1;
-  /* transition: 0.1s; */
+    /* background-color: #2F4550 !important; */
+    opacity: 1;
+    /* transition: 0.1s; */
 }
 
 div.logo {
-  /* border-radius: 100%; */
-  /* height: 98%; */
+    /* border-radius: 100%; */
+    /* height: 98%; */
 }
 
 div.logo img {
-  width: 4em;
+    width: 4em;
 }
 
 div.nav {
-  display: inline-flex;
-  list-style: none;
-  padding: 1%;
-  margin: 0;
-  align-items: center;
+    display: inline-flex;
+    list-style: none;
+    padding: 1%;
+    margin: 0;
+    align-items: center;
 }
 
 div.nav a {
-  padding: 7px;
-  text-decoration: none;
-  border: 0.5px solid #e5e5f1;
-  margin-left: 1%;
-  color: #e5e5f1;
+    padding: 7px;
+    text-decoration: none;
+    border: 0.5px solid #e5e5f1;
+    margin-left: 1%;
+    color: #e5e5f1;
 }
 
 div.nav a .active {
-  color: #141414 !important;
-  background-color: #e4e4f1 !important;
+    color: #141414 !important;
+    background-color: #e4e4f1 !important;
 }
 
 div.nav a:hover {
-  border: 0.5px solid #e5e5f1;
-  background-color: #586f7c;
+    border: 0.5px solid #e5e5f1;
+    background-color: #586f7c;
 }
 
 div.user {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 div.user .search-box {
-  display: inline-flex;
-  background-color: #e5e5f1;
+    display: inline-flex;
+    background-color: #e5e5f1;
 }
 
 .search-box img {
-  width: 1em;
-  display: inline !important;
+    width: 1em;
+    display: inline !important;
 }
 
 .search-box input {
-  width: 100%;
+    width: 100%;
 }
+
 
 /* .search-btn,
 .search-key {
     height: 3%;
 } */
 
+
 /* main content */
+
 
 /* section intro */
 
 section.container-fluid {
-  padding: 0% !important;
+    padding: 0% !important;
 }
 
 .intro div.col {
-  padding: 0%;
+    padding: 0%;
 }
 
 #carouselExampleControls button {
-  width: 5em;
+    width: 5em;
 }
+
 
 /* welcome section */
 
 .welcome {
-  padding: 2% 1%;
-  margin-bottom: 2% !;
+    padding: 2% 1%;
+    margin-bottom: 2% !;
 }
 
 .welcome img {
-  margin: 0 auto;
+    margin: 0 auto;
 }
+
 
 /* destination section */
 
 .top-dest .dest {
-  padding: 0 !important;
+    padding: 0 !important;
 }
+
 
 /* .top-dest .dest:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
@@ -128,163 +135,172 @@ section.container-fluid {
 } */
 
 .top-dest .dest img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  margin: auto;
-  transition: transform 0.3s;
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: auto;
+    transition: transform 0.3s;
 }
 
 .dest img:hover {
-  transform: scale(1.5);
+    transform: scale(1.5);
 }
+
 
 /* plan */
 
 .wall ul.travel-icons {
-  list-style: none;
-  padding: 0;
-  text-align: center;
+    list-style: none;
+    padding: 0;
+    text-align: center;
 }
 
 .travel-icons li {
-  list-style: none;
-  margin: 0 20px;
-  display: inline-block;
+    list-style: none;
+    margin: 0 20px;
+    display: inline-block;
 }
 
 .travel-icons a {
-  text-decoration: none;
-  outline: 0;
-  color: #337ab7;
+    text-decoration: none;
+    outline: 0;
+    color: #337ab7;
 }
 
 .travel-icons li i {
-  display: inline-block;
-  width: 100px;
-  height: 100px;
-  padding: 20px;
-  -webkit-border-radius: 80px 80px 80px 80px;
-  color: #ffffff;
-  cursor: pointer;
-  line-height: 40px;
-  font-size: 30px;
-  background-color: #036;
-  text-align: center;
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+    -webkit-border-radius: 80px 80px 80px 80px;
+    color: #ffffff;
+    cursor: pointer;
+    line-height: 40px;
+    font-size: 30px;
+    background-color: #036;
+    text-align: center;
 }
 
 .travel-icons li i img {
-  margin: 0 auto;
-  width: 80%;
+    margin: 0 auto;
+    width: 80%;
 }
 
 .travel-icons li a .caption {
-  color: #036;
-  font-size: 20px;
-  font-weight: 500;
-  margin: 10px 0;
-  display: block;
-  text-align: center;
-  letter-spacing: -0.5px;
+    color: #036;
+    font-size: 20px;
+    font-weight: 500;
+    margin: 10px 0;
+    display: block;
+    text-align: center;
+    letter-spacing: -0.5px;
 }
+
 
 /* footer */
 
 footer {
-  background-color: #e4e4f1;
-  padding: 3% 2%;
+    background-color: #e4e4f1;
+    padding: 3% 2%;
 }
 
 footer .fnt-color-light {
-  text-align: center;
-  font-family: "Quicksand", sans-serif;
-  font-size: 16px;
-  color: #666;
+    text-align: center;
+    font-family: "Quicksand", sans-serif;
+    font-size: 16px;
+    color: #666;
 }
 
 .credit h3 {
-  font-family: "Quicksand", sans-serif;
-  padding: 0px;
-  font-size: 20px;
-  line-height: 1em;
-  color: #28497c;
+    font-family: "Quicksand", sans-serif;
+    padding: 0px;
+    font-size: 20px;
+    line-height: 1em;
+    color: #28497c;
 }
+
 
 /* Ernakulam */
 
-.dist-intro{
+.dist-intro {
     top: 0!important;
 }
 
 .dist-img {
-  padding: 0 !important;
+    padding: 0 !important;
 }
 
-.glow{
-    /* width: 25% !important; */
+.glow {
+    width: 15% !important;
     position: absolute;
     top: 25%;
-    left: 60%;
+    left: 54%;
     animation: glow 1s ease-in-out infinite alternate;
     font-size: 60px;
-  color: #fff;
+    color: #fff;
 }
 
 @-webkit-keyframes glow {
     from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #252525, 0 0 40px #292929, 0 0 50px #494045, 0 0 60px #383838, 0 0 70px #313131;
     }
-    
     to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+        text-shadow: 0 0 20px #fff, 0 0 30px #0a0a0a, 0 0 40px #0c0c0c, 0 0 50px #131212, 0 0 60px #141414, 0 0 70px #110f10, 0 0 80px #0a0a0a;
     }
-  }
+}
+
 .dist-img img {
-  width: 100%;
+    width: 100%;
+}
+
+.text-center h2 {
+    font-size: 20px;
 }
 
 .image-container {
-  width: 50%;
-  display: block;
-  margin: auto;
-  padding: 1%;
-  position: relative;
-  top: -20%;
-  left: 0;
-  background-color: red; /* For browsers that do not support gradients */
-  background-image: linear-gradient(180deg,white, #496979);
+    width: 50%;
+    display: block;
+    margin: auto;
+    padding: 1%;
+    position: relative;
+    top: -45px;
+    left: 0;
+    background-color: red;
+    /* For browsers that do not support gradients */
+    background-image: linear-gradient(180deg, white, #496979);
 }
 
-
-.animated{
+.animated {
     animation-name: fadeInLeft;
     animation-duration: 1s;
     animation-fill-mode: both;
 }
 
-.places .places-row{
+.places .places-row {
     height: auto !important;
 }
 
-.places-row .col-3{
+.places-row .col-3 {
     height: 100%;
 }
 
-.places-row figure img{
+.places-row figure img {
     width: 98%;
 }
 
-.places-row .text-justify{
+.places-row .text-justify {
     margin-bottom: auto !important;
 }
-.place-location{
+
+.place-location {
     margin: 0 !important;
 }
 
-.set-more{
+.set-more {
     text-align: center;
 }
-.more{
+
+.more {
     width: 7% !important;
     margin: 0 auto;
     padding: 1% 2%;
