--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ html,
 body {
     background-color: #e4e4f1;
     width: 100%;
-    height: 100%;
+    height: auto !important;
 }
 
 .row {
@@ -198,6 +198,14 @@ footer .fnt-color-light {
     padding: 0 !important;
 }
 
+.light {
+    background-color: white;
+}
+
+.card-body {
+    text-align: center;
+}
+
 .glow {
     width: 15% !important;
     position: absolute;
@@ -332,12 +340,16 @@ footer .fnt-color-light {
 } */
 
 .signup {
-    background-image: url('../images/login/img2.jpg');
+    background-image: url('../images/login/bg1.jpg');
     height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.signupForm {
+    color: whitesmoke;
 }
 
 
