--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,15 @@
     width: auto !important;
 } */
 
-html,
+html {
+    width: 100% !important;
+    /* height: 100% !important; */
+}
+
 body {
     background-color: #e4e4f1;
     width: 100%;
-    height: auto !important;
+    height: 100% !important;
 }
 
 .row {
@@ -307,7 +311,7 @@ footer .fnt-color-light {
 /* login */
 
 .loginForm {
-    background-image: url('../images/login/img3.jpg');
+    background-image: url('../images/login/bg1LG.jpg');
     /* Full height */
     height: 100%;
     /* Center and scale the image nicely */
